creacion componentes y responsive

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     />
     <title>News-Homepage</title>
   </head>
-  <body class="bg-OffWhite">
+  <body class="bg-OffWhite font-display">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
